# Implantacao-nuvem

./: .gitignore  README.md
.github/workflows/: api.yml
services/tasks_api/: package.json  pyproject.toml  serverless.yml
